# event-correlation-service

./: README.md  pyproject.toml  test.py
event_correlation_service/: cli.py  correlator.py  event_sinks.py  event_sources.py  service.py
